[package]
name = "exp1"
version = "0.1.0"
authors = ["fpg2012 <fpg2012@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
min-max-heap = "1.3.0"
[dependencies.gtk]
version = "0.9.0"
features = ["v3_22"]

[dependencies.gio]
version = "0.9.1"
features = ["v2_44"]
